@@ -30,6 +30,9 @@ local lups_effects = {
   rumad_mlrpt_rumad_plasma = {
      {class = "Ribbon", options={width=2, size=12, color={0.9,0.9,0.9,1},priority=1},},
   },
+  rumad_lrpt_rumad_plasma = {
+     {class = "Ribbon", options={width=2, size=12, color={0.9,0.9,0.9,1},priority=1},},
+  },
   rumad_mongol_rumad_plasma = {
      {class = "Ribbon", options={width=2, size=12, color={0.9,0.9,0.9,1},priority=1},},
   },
