@@ -1,0 +1,104 @@
+#define TA
+
+#include "sfxtype.h"
+#include "exptype.h"
+
+piece  base, socle, rail, turret, pitchturret, barrel, fire;
+
+static-var  UnitHeading, UnitSpeed, Deployed, Firing;
+
+// Signal definitions
+#define SIG_AIM			2
+
+SmokeUnit(healthpercent, sleeptime, smoketype)
+{
+	while( get BUILD_PERCENT_LEFT )
+	{
+		sleep 400;
+	}
+	while( TRUE )
+	{
+		healthpercent = get HEALTH;
+		if( healthpercent < 66 )
+		{
+			smoketype = 256 | 2;
+			if( Rand( 1, 66 ) < healthpercent )
+			{
+				smoketype = 256 | 1;
+			}
+			emit-sfx smoketype from base;
+		}
+		sleeptime = healthpercent * 50;
+		if( sleeptime < 200 )
+		{
+			sleeptime = 200;
+		}
+		sleep sleeptime;
+	}
+}
+
+Create()
+{
+	start-script SmokeUnit();
+}
+
+SweetSpot(PieceNum)
+{
+	PieceNum = base;
+}
+
+QueryPrimary(PieceNum)
+{
+	PieceNum = fire;
+}
+
+AimFromPrimary(PieceNum)
+{
+	PieceNum = pitchturret;
+}
+
+AimPrimary(Heading, Pitch)
+{
+	signal SIG_AIM;
+	set-signal-mask SIG_AIM;
+	
+	turn turret to y-axis Heading speed <50.00>;
+	turn pitchturret to x-axis <0.00> - Pitch speed <20.00>;
+	
+	wait-for-turn turret around y-axis;
+	wait-for-turn pitchturret around x-axis;
+	
+	return(1);
+}
+
+FirePrimary(Random)
+{
+	emit-sfx 1024 + 0 from fire;
+	move rail to z-axis [-1.50] speed [200.00];
+	sleep 100;
+	move rail to z-axis [0.00] speed [1.00];
+	Firing = 0;
+}
+
+Killed(Severity, CorpseType, Random)
+{
+	if( Severity <= 50 )
+	{
+		CorpseType = 1;
+		explode turret type FALL | SMOKE | EXPLODE_ON_HIT | NOHEATCLOUD;
+	}
+	
+	CorpseType = 3;
+	
+	Random = Rand( 1, 2 );
+	if( Random == 1 )
+	{
+		explode barrel type FALL | SMOKE | EXPLODE_ON_HIT | NOHEATCLOUD;
+	}
+	Random = Rand( 1, 2 );
+	if( Random == 1 )
+	{
+		explode rail type FALL | SMOKE | EXPLODE_ON_HIT | NOHEATCLOUD;
+	}
+	return (CorpseType);
+}
