@@ -2,11 +2,11 @@ return {
 	armpw = {
 		acceleration = 0.36,
 		brakerate = 0.6,
-		buildcostenergy = 951,
-		buildcostmetal = 48,
+		buildcostenergy = 950,
+		buildcostmetal = 50,
 		builder = false,
 		buildpic = "armpw.dds",
-		buildtime = 1420,
+		buildtime = 1400,
 		canattack = true,
 		canguard = true,
 		canmove = true,
@@ -28,7 +28,7 @@ return {
 		losemitheight = 25,
 		maneuverleashlength = 640,
 		mass = 50,
-		maxdamage = 300,
+		maxdamage = 310,
 		maxslope = 17,
 		maxvelocity = 2.8,
 		maxwaterdepth = 12,
