@@ -2,11 +2,11 @@ return {
 	corak = {
 		acceleration = 0.39,
 		brakerate = 0.75,
-		buildcostenergy = 892,
-		buildcostmetal = 42,
+		buildcostenergy = 850,
+		buildcostmetal = 50,
 		builder = false,
 		buildpic = "corak.dds",
-		buildtime = 1280,
+		buildtime = 1400,
 		canattack = true,
 		canguard = true,
 		canmove = true,
@@ -28,7 +28,7 @@ return {
 		losemitheight = 24,
 		maneuverleashlength = 640,
 		mass = 42,
-		maxdamage = 260,
+		maxdamage = 290,
 		maxslope = 17,
 		maxvelocity = 2.8,
 		maxwaterdepth = 25,
