@@ -2,11 +2,11 @@ return {
 	gok_bloodletter = {
 		acceleration = 0.39,
 		brakerate = 0.75,
-		buildcostenergy = 992,
-		buildcostmetal = 47,
+		buildcostenergy = 950,
+		buildcostmetal = 50,
 		builder = false,
 		buildpic = "gok_bloodletter.dds",
-		buildtime = 1280,
+		buildtime = 1400,
 		canattack = true,
 		canguard = true,
 		canmove = true,
@@ -27,8 +27,8 @@ return {
 		idletime = 1800,
 		losemitheight = 24,
 		maneuverleashlength = 640,
-		mass = 47,
-		maxdamage = 285,
+		mass = 50,
+		maxdamage = 295,
 		maxslope = 17,
 		maxvelocity = 2.8,
 		maxwaterdepth = 25,
