@@ -3,7 +3,7 @@ return {
 		acceleration = 0.5,
 		brakerate = 1.5,
 		buildcostenergy = 425,
-		buildcostmetal = 24,
+		buildcostmetal = 25,
 		builder = false,
 		buildpic = "gok_cut.dds",
 		buildtime = 700,
@@ -27,7 +27,7 @@ return {
 		idletime = 1800,
 		losemitheight = 22,
 		maneuverleashlength = 640,
-		mass = 24,
+		mass = 25,
 		maxdamage = 50,
 		maxslope = 255,
 		maxvelocity = 4.6,
