@@ -76,12 +76,10 @@ return {
 			[15] = "rumad_nanotc1",
 			[16] = "rumad_sd",
 			[17] = "rumad_gate",
-			[18] = "rumad_antinuke",
-			[19] = "rumad_silo",
-			--[20] = "",
-			--[22] = "",
-			--[23] = "",
-			[20] = "rumad_asp",
+			[18] = "rumad_lrpt",
+			[19] = "rumad_antinuke",
+			[20] = "rumad_silo",
+			[21] = "rumad_asp",
 		},
 		customparams = {
 			buildpic = "rumad_aca.dds",
