@@ -74,8 +74,9 @@ return {
 			[15] = "rumad_targ",
 			[16] = "rumad_sd",
 			[17] = "rumad_gate",
-			[18] = "rumad_antinuke",
-			[19] = "rumad_silo",
+			[18] = "rumad_lrpt",
+			[19] = "rumad_antinuke",
+			[20] = "rumad_silo",
 			--[20] = "",
 			--[22] = "",
 			--[23] = "",
