@@ -1,17 +1,11 @@
 return {
-	armbrtha = {
-		acceleration = 0,
-		brakerate = 0,
+	rumad_lrpt = {
 		buildangle = 32700,
-		buildcostenergy = 62700,
-		buildcostmetal = 4510,
+		buildcostenergy = 70000,
+		buildcostmetal = 4940,
 		builder = false,
-		buildinggrounddecaldecayspeed = 30,
-		buildinggrounddecalsizex = 6,
-		buildinggrounddecalsizey = 6,
-		buildinggrounddecaltype = "armbrtha_aoplane.dds",
-		buildpic = "armbrtha.dds",
-		buildtime = 85000,
+		buildpic = "rumad_lrpt.dds",
+		buildtime = 90000,
 		canattack = true,
 		canstop = 1,
 		category = "ALL SURFACE",
@@ -26,13 +20,13 @@ return {
 		idleautoheal = 5,
 		idletime = 1800,
 		losemitheight = 81,
-		mass = 4510,
-		maxdamage = 4200,
+		mass = 4540,
+		maxdamage = 4325,
 		maxslope = 12,
 		maxvelocity = 0,
 		maxwaterdepth = 0,
 		name = "Long Range Plasma Cannon",
-		objectname = "ARMBRTHA",
+		objectname = "rumad_lrpt",
 		radaremitheight = 81,
 		seismicsignature = 0,
 		selfdestructas = "CRAWL_BLAST",
@@ -41,21 +35,18 @@ return {
 		turninplaceanglelimit = 140,
 		turninplacespeedlimit = 0,
 		turnrate = 0,
-		unitname = "armbrtha",
-		usebuildinggrounddecal = true,
-		usepiececollisionvolumes = true,
-		usepieceselectionvolumes = true,
+		unitname = "rumad_lrpt",
 		yardmap = "oooooooooooooooo",
 		customparams = {
-			buildpic = "armbrtha.dds",
+			buildpic = "rumad_lrpt.dds",
 			canareaattack = 1,
-			faction = "ARM",
+			faction = "RUMAD",
 		},
 		featuredefs = {
 			dead = {
 				blocking = true,
-				collisionvolumeoffsets = "3.15924835205 -0.787798413086 6.6563873291",
-				collisionvolumescales = "81.6838531494 113.772003174 72.5632324219",
+				collisionvolumeoffsets = "0 0 0",
+				collisionvolumescales = "81 113 72",
 				collisionvolumetype = "Box",
 				damage = 3509,
 				description = "Big Bertha Wreckage",
@@ -64,7 +55,7 @@ return {
 				footprintx = 3,
 				footprintz = 3,
 				metal = 3375,
-				object = "ARMBRTHA_DEAD",
+				object = "rumad_lrpt_DEAD",
 				reclaimable = true,
 				customparams = {
 					fromunit = 1,
@@ -120,45 +111,44 @@ return {
 			},
 		},
 		weapondefs = {
-			arm_berthacannon2 = {
+			rumad_plasma = {
 				accuracy = 500,
 				areaofeffect = 128,
 				avoidfeature = false,
-				cegtag = "Trail_cannon_med",
 				craterareaofeffect = 128,
 				craterboost = 0,
 				cratermult = 0,
 				energypershot = 10000,
 				explosiongenerator = "custom:flash128_fakelight",
-				gravityaffected = "TRUE",
 				impulseboost = 0.123,
 				impulsefactor = 0.123,
-				name = "Bertha Cannon",
-				nogap = 1,
+				name = "Plasma",
 				noselfdamage = true,
+				projectiles = 2,
 				range = 5000,
-				reloadtime = 8,
-				rgbcolor = "0.93 0.74 0",
+				reloadtime = 10,
+				rgbcolor = "0.9 0.9 0.9",
 				separation = 0.45,
-				size = 2.6,
+				size = 2,
 				sizedecay = -0.15,
-				soundhitdry = "xplonuk1",
-				soundhitwet = "splslrg",
-				soundhitwetvolume = 0.6,
-				soundstart = "xplonuk4",
+				soundhitdry = "xplomed2",
+				soundhitwet = "splshbig",
+				soundhitwetvolume = 0.5,
+				soundstart = "techa_sounds/rumad_plasma",
+				sprayangle = 720,
 				stages = 20,
 				turret = true,
 				weapontype = "Cannon",
-				weaponvelocity = 950,
+				weaponvelocity = 780,
 				damage = {
-					default = 1000,
+					default = 700,
 					subs = 5,
 				},
 			},
 		},
 		weapons = {
 			[1] = {
-				def = "ARM_BERTHACANNON2",
+				def = "RUMAD_PLASMA",
 				onlytargetcategory = "SURFACE",
 			},
 		},
