@@ -2,11 +2,11 @@ return {
 	rumad_mlrpt = {
 		acceleration = 0.036,
 		brakerate = 0.15,
-		buildcostenergy = 85050,
+		buildcostenergy = 95050,
 		buildcostmetal = 5500,
 		builder = false,
 		buildpic = "rumad_mlrpt.dds",
-		buildtime = 85000,
+		buildtime = 90000,
 		canattack = true,
 		canguard = true,
 		canmove = true,
@@ -122,7 +122,7 @@ return {
 				craterareaofeffect = 128,
 				craterboost = 0,
 				cratermult = 0,
-				energypershot = 8000,
+				energypershot = 10000,
 				explosiongenerator = "custom:flash128_fakelight",
 				impulseboost = 0.123,
 				impulsefactor = 0.123,
@@ -130,7 +130,7 @@ return {
 				noselfdamage = true,
 				projectiles = 2,
 				range = 4000,
-				reloadtime = 5,
+				reloadtime = 10,
 				rgbcolor = "0.9 0.9 0.9",
 				separation = 0.45,
 				size = 2,
@@ -145,7 +145,7 @@ return {
 				weapontype = "Cannon",
 				weaponvelocity = 780,
 				damage = {
-					default = 800,
+					default = 700,
 					subs = 5,
 				},
 			},
