@@ -2,11 +2,11 @@ return {
 	talon_sniper = {
 		acceleration = 0.36,
 		brakerate = 0.6,
-		buildcostenergy = 2150,
-		buildcostmetal = 85,
+		buildcostenergy = 3500,
+		buildcostmetal = 45,
 		builder = false,
 		buildpic = "talon_sniper.dds",
-		buildtime = 2000,
+		buildtime = 2400,
 		canattack = true,
 		canguard = true,
 		canmove = true,
@@ -27,7 +27,7 @@ return {
 		idletime = 1800,
 		losemitheight = 25,
 		maneuverleashlength = 640,
-		mass = 85,
+		mass = 45,
 		maxdamage = 175,
 		maxslope = 17,
 		maxvelocity = 1.1,
