@@ -2,11 +2,11 @@ return {
 	tllmlrpc = {
 		acceleration = 0.036,
 		brakerate = 0.15,
-		buildcostenergy = 82174,
-		buildcostmetal = 5502,
+		buildcostenergy = 70150,
+		buildcostmetal = 5390,
 		builder = false,
 		buildpic = "tllmlrpc.dds",
-		buildtime = 90000,
+		buildtime = 85000,
 		canattack = true,
 		canguard = true,
 		canmove = true,
@@ -18,7 +18,7 @@ return {
 		collisionvolumetype = "box",
 		corpse = "dead",
 		defaultmissiontype = "Standby",
-		description = "LRPC Vehicle",
+		description = "Mobile LRPC",
 		explodeas = "CRAWL_BLAST",
 		firestandorders = 1,
 		footprintx = 4,
@@ -28,7 +28,7 @@ return {
 		leavetracks = true,
 		losemitheight = 45,
 		maneuverleashlength = 640,
-		mass = 5502,
+		mass = 5390,
 		maxdamage = 4960,
 		maxslope = 12,
 		maxvelocity = 1.2,
