@@ -1,9 +1,10 @@
  4.48 => 4.49
-2023-06-09
+2023-06-16
 
 Balance :
  - Increase buildtime for all commander. Goal is to add more time to capture them.
  - All Gok Quadrupod except crab arty : Delete All-Terrain Feature
+ - Some adjustement for all pewee class. Cost fixed at 50M min. Talon Sniper cost 85M=>45M and Energy cost 1400 => 2500. All units <50Metal are targeted by Juno
 
  Fix :
  - Mines Tech2+ are buildable
